...
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/body_part_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="45dp" />

                </LinearLayout>

                <LinearLayout
...
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="Exercise Name"
                                android:textColor="@color/white" />

                            <EditText
                                android:id="@+id/edit_exercise_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:ems="10"
                                android:inputType="text"
                                android:textColor="@color/white" />
...
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="Exercise Length (hh:mm:ss)"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/editTextTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:ems="10"
                            android:inputType="time"
                            android:textColor="@color/white" />
...
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="Sets"
                                android:textColor="@color/white" />

                            <EditText
                                android:id="@+id/number_of_sets"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="numberDecimal"
                                android:textColor="@color/white" />

...
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="Reps"
                                android:textColor="@color/white" />

                            <EditText
                                android:id="@+id/number_of_reps"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="numberDecimal"
                                android:textColor="@color/white" />

...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:onClick="submitStrengthExercise"
                    android:text="Submit"
                    android:textColor="@color/white"
...
