<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_gradient"
    tools:context=".presentation.WorkoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-25dp"
        tools:layout_editor_absoluteY="-61dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/new_exercise"
                android:layout_width="37dp"
                android:layout_height="141dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_back_arrow"
                android:fontFamily="sans-serif-black"
                android:onClick="goBackAPage"
                android:paddingLeft="16dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:paddingLeft="60dp"
                android:text="Workout"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_profile_workout"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:src="@drawable/gympic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="694dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="584dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:gravity="center"
                    android:padding="20dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/new_cardio_exe_btn"
                        android:layout_width="150dp"
                        android:layout_height="45dp"
                        android:layout_marginRight="40dp"
                        android:onClick="newCardioExercise"
                        app:cardBackgroundColor="#00BFA5"
                        app:cardCornerRadius="6dp">

                        <RelativeLayout
                            android:id="@+id/new_cardio_exercise"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="47dp"
                                android:layout_height="match_parent"

                                app:srcCompat="@android:drawable/ic_menu_add"
                                app:tint="@color/black" />

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="128dp"
                                android:layout_height="match_parent"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentEnd="true"
                                android:layout_marginStart="49dp"
                                android:layout_marginEnd="0dp"
                                android:fontFamily="@font/montserrat_bold"
                                android:paddingTop="6dp"
                                android:text="Cardio"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/new_strength_exe_btn"
                        android:layout_width="150dp"
                        android:layout_height="45dp"
                        android:onClick="newStrengthExercise"
                        app:cardBackgroundColor="#00BFA5"
                        app:cardCornerRadius="6dp">

                        <RelativeLayout
                            android:id="@+id/new_strength_exercise"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView

                                android:layout_width="47dp"
                                android:layout_height="match_parent"
                                app:srcCompat="@android:drawable/ic_menu_add"
                                app:tint="@color/black" />

                            <TextView

                                android:layout_width="128dp"
                                android:layout_height="match_parent"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentEnd="true"
                                android:layout_marginStart="49dp"
                                android:layout_marginEnd="0dp"
                                android:fontFamily="@font/montserrat_bold"
                                android:paddingTop="6dp"
                                android:text="Strength"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="68dp"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/finish_workout_button"
                            android:layout_width="340dp"
                            android:layout_height="58dp"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/montserrat_bold"
                            android:onClick="finishWorkout"
                            android:text="Finish"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:text="Exercises"
                        android:textColor="@color/white" />

                    <ListView
                        android:id="@+id/exercise_list"
                        android:layout_width="383dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>