...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="97dp"
                    android:gravity="bottom">

                    <Button
                        android:id="@+id/buttonWalk"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_walk"
                        android:fontFamily="@font/montserrat_bold"
...
                        android:text="Bicycle"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:cornerRadius="10dp" />

                    <Button
                        android:id="@+id/buttonRun"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_run"
                        android:fontFamily="@font/montserrat_bold"
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/editTextDistance"
                                android:layout_width="349dp"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="numberDecimal"
                                android:textColor="@color/white" />

...
